kustomize/bff/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bff-service
  name: bff-service
spec:
  ports:
    - port: 3000
      protocol: TCP
      name: rest
      targetPort: 3000
  selector:
    app: bff
---
