kustomize/bff/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bff-route
  labels:
    app: bff-route
spec:
  host: bff.affds.apps.blockchain-europe.iml.fraunhofer.de
  to:
    kind: Service
    name: bff-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
